--- a/ambiente.yml
+++ b/ambiente.yml
@@ -1,3 +1,31 @@
-name: ensayo
+name: ambiente
+channels:
+  - defaults
 dependencies:
-  - python=3.7
+  - ca-certificates=2020.1.1=0
+  - certifi=2020.4.5.1=py37_0
+  - libcxx=4.0.1=hcfea43d_1
+  - libcxxabi=4.0.1=hcfea43d_1
+  - libedit=3.1.20181209=hb402a30_0
+  - libffi=3.2.1=h0a44026_6
+  - ncurses=6.2=h0a44026_0
+  - openssl=1.1.1g=h1de35cc_0
+  - pip=20.0.2=py37_1
+  - python=3.7.7=hc70fcce_0_cpython
+  - readline=8.0=h1de35cc_0
+  - setuptools=46.1.3=py37_0
+  - sqlite=3.31.1=h5c1f38d_1
+  - tk=8.6.8=ha441bb4_0
+  - wheel=0.34.2=py37_0
+  - xz=5.2.5=h1de35cc_0
+  - zlib=1.2.11=h1de35cc_3
+  - pip:
+    - cycler==0.10.0
+    - kiwisolver==1.2.0
+    - matplotlib==3.2.1
+    - numpy==1.18.3
+    - pyparsing==2.4.7
+    - python-dateutil==2.8.1
+    - six==1.14.0
+prefix: /anaconda3/envs/ambiente
+
